# Voxeterra

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  VOXEL_SYSTEM.md  config.json  main.cpp  shell.nix
doc/: Camera.md  Engine.md  README.md  architecture.md  index.md
doc/.obsidian/: workspace.json
doc/config/: index.md
doc/input/: index.md
doc/states/: index.md
doc/ui/: UIButton.md  UIElement.md  index.md
doc/vulkan/: CommandPool.md  DepthBuffer.md  Device.md  FrameSync.md  Framebuffer.md  Instance.md  Pipeline.md  RenderPass.md  Swapchain.md  WorldRenderer.md  index.md
doc/world/: Chunk.md  Voxel.md  World.md  index.md
fonts/: README.md
headers/: Camera.hpp  Config.hpp  Engine.hpp  GameState.hpp  StateManager.hpp  Window.hpp
headers/Input/: InputManager.hpp
headers/States/: MainMenuState.hpp  PausedState.hpp  PlayingState.hpp  SettingsState.hpp
headers/UI/: UIButton.hpp  UIElement.hpp  UILabel.hpp  UIPanel.hpp  UIRenderer.hpp
headers/Vulkan/: Buffer.hpp  CommandPool.hpp  DepthBuffer.hpp  Device.hpp  FrameSync.hpp  Framebuffer.hpp  Instance.hpp  Pipeline.hpp  Pipeline2D.hpp  RenderPass.hpp  Shader.hpp  Swapchain.hpp  TextRenderer.hpp
headers/World/: Chunk.hpp  Voxel.hpp  World.hpp  WorldRenderer.hpp
headers/utils/: BitUtils.hpp
shaders/: compile.sh  hardcoded.vert  test.vert  triangle.vert  ui.frag  ui.vert  voxel.frag  voxel.vert  water.frag
src/: Camera.cpp  Config.cpp  Engine.cpp  StateManager.cpp  Window.cpp
src/Input/: InputManager.cpp
src/States/: MainMenuState.cpp  PausedState.cpp  PlayingState.cpp  SettingsState.cpp
src/UI/: UIRenderer.cpp
src/Vulkan/: Buffer.cpp  CommandPool.cpp  DepthBuffer.cpp  Device.cpp  FrameSync.cpp  Framebuffer.cpp  Instance.cpp  Pipeline.cpp  Pipeline2D.cpp  RenderPass.cpp  Shader.cpp  Swapchain.cpp  TextRenderer.cpp
src/World/: Chunk.cpp  World.cpp  WorldRenderer.cpp
